Update SPA to 2.9.0

--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x040A
 Name=Spanish (Español)
-Version=2.8.9
+Version=2.9.0
 Author=Steven Rogers, Leandro Botella Penalva
 1=Aceptar
 2=Cancelar
@@ -94,9 +94,9 @@ Author=Steven Rogers, Leandro Botella Penalva
 
 [DIALOG_14]
 1=Iniciar
-3=Origen
-4=Destino
-5=Opciones
+3=&Origen
+4=&Destino
+5=&Opciones
 6=Información
 7=Tipo:
 8=Tamaño:
@@ -104,13 +104,13 @@ Author=Steven Rogers, Leandro Botella Penalva
 10=Espacio libre:
 11=Capacidad:
 12=&Mantener protección
-13=Verificar &hash del contenido
-14=Crear archivo de suma de comprobación &md5
-15=Crear &dvdid.xml
-16=Crear archivo de registro
+13=&Verificar hash del contenido
+14=Crear archivo de suma de &comprobación &md5
+15=Crear dvdid.&xml
+16=Crear archivo de &registro
 17=Crear disc.&metaiso
 18=Copiar solo la carpeta VIDEO_TS
-19=Verificar bytes de sincronización &M2TS
+19=Verificar &bytes de sincronización M2TS
 
 [DIALOG_15]
 0=Xreveal
@@ -129,9 +129,9 @@ Author=Steven Rogers, Leandro Botella Penalva
 3=Número de reintentos de lectura:
 4=Abortar cuando los errores ignorados excedan:
 5=Copiar carpeta SSIF al copiar Blu-ray 3D a carpeta
-6=Agregar el registro del estado de la unidad al registro de copiado
+6=Agregar el registro de información de la unidad al registro de copiado
 7=Mostrar advertencia al crear una imagen protegida
-8=Enable the built-in ripper for &virtual drives
+8=Habilitar el copiador incorporado para unidades &virtuales
 
 [DIALOG_18]
 0=Registrar Xreveal
@@ -181,7 +181,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 6=Sonido de error:
 
 [DIALOG_28]
-0=Envio de metafile
+0=Enviar Metafile
 1=&Enviar
 3=Creando metafile del disco, por favor espera...
 4=Añadiendo %s...
@@ -195,9 +195,9 @@ Author=Steven Rogers, Leandro Botella Penalva
 [DIALOG_29]
 0=Acciones
 3=Acción Post-Análisis
-4=Especifica un comando a ejecutar tras abrir disco. <a>Macros soportadas</a>.
+4=Especifica un comando a ejecutar tras abrir disco. <a>Variables soportadas</a>.
 5=Acción Post-Copia
-6=Especifica un comando a ejecutar tras copiar disco. <a>Macros soportadas</a>.
+6=Especifica un comando a ejecutar tras copiar disco. <a>Variables soportadas</a>.
 
 [DIALOG_30]
 0=Código de país
@@ -238,18 +238,18 @@ Author=Steven Rogers, Leandro Botella Penalva
 7=Iniciar
 
 [DIALOG_35]
-0=Destination Templates
-3=&Add
-4=&Edit
-5=&Delete
-6=Move &Up
-7=&Move Down
-8=Note: the first item is the default template.
+0=Plantillas de Destino
+3=&Añadir
+4=&Editar
+5=Elimina&r
+6=&Subir
+7=&Bajar
+8=Nota: el primer elemento es la plantilla predeterminada.
 
 [DIALOG_36]
-0=Destination
-3=Supported variables and <a>transforms</a>. Format: $(variable:transform), all names are case-insensitive.
-4=Replace underscores in $(DiscLabel) to spaces
+0=Destino
+3=Variables soportadas y <a>transformaciones</a>. Formato: $(variable:transformación), todos los nombres no distinguen mayúsculas y minúsculas.
+4=Remplazar barras bajas en $(DiscLabel) por espacios
 
 [DIALOG_37]
 0=DestDir
@@ -258,17 +258,17 @@ Author=Steven Rogers, Leandro Botella Penalva
 
 [DIALOG_38]
 0=DiscTypeMap
-3=Please specify a map value corresponding to the disc type. <a>Supported variables</a>.
+3=Por favor, especifica un valor del mapa correspondiente al tipo de disco. <a>Variables soportadas</a>.
 4=&DVD:
 5=&HD DVD:
 6=&BD:
 7=&UHD:
 
 [DIALOG_39]
-0=Replace or Save as
-3=The destination <a>%s</a> aready exists.
-4=Replace
-5=Save as
+0=Remplazar o Guardar como
+3=El destino <a>%s</a> ya existe.
+4=Remplazar
+5=Guardar como
 
 [DIALOG_A]
 0=Actualización de Software
@@ -316,12 +316,12 @@ Author=Steven Rogers, Leandro Botella Penalva
 18=Xreveal no funcionará si %s está en ejecución.\n\n¿Quieres cerrarlo?
 19=Xreveal está analizando la unidad %C:
 20=El disco que has insertado estará disponible en breve, ¡por favor, espera!
-21=unidad %C: ¡no está en el modo de descifrado al vuelo!\n\nPara más información, consulta la ventana de Estado en Ajustes.
+21=unidad %C: ¡no está en el modo de descifrado al vuelo!\n\nPara más información, consulta la ventana de Información en Ajustes.
 22=¡El directorio '%s' no tiene espacio suficiente!\nNecesitas %s adicionales.
 23=Copiando %s...
 24=%.1f MB/s
 25=¡Operación completada correctamente!
-26=¡No se encontró la clave del disco! {%s}
+26=¡No se encontró una clave de descifrado! {%s}
 27=&Página principal
 28=Fallo al abrir el disco, código de error: %s.
 29=Unidad
@@ -337,7 +337,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 39=%C:\[%S]
 40=&Estado
 41=&Abrir en el Explorador
-42=&Envio de metafile
+42=Enviar &Metafile
 43=Verificador de Hash del Contenido
 44=Copiar a &Carpeta...
 45=Copiar a Archivo &ISO...
@@ -352,7 +352,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 54=&Cargar
 55=&Propiedades
 56=Ninguno
-57=Estás usando la versión gratuita, <a>mejora a Pro</a> para desbloquear características extra.
+57=Estás usando la versión gratuita, <a>mejora a Pro</a> para desbloquear las características de Pro.
 58=%s ya existe.\n¿Quieres remplazarlo?
 59=¿Estás seguro de que quieres cancelar?
 60=Tu licencia expiró el %s.
@@ -465,20 +465,20 @@ Author=Steven Rogers, Leandro Botella Penalva
 167=Por favor, selecciona o arrastra un archivo ISO aquí
 168=Por favor, selecciona o arrastra una carpeta aquí
 169=Ayuda
-170=Name
-171=Value
-172=User variables (Right-click an item to edit the value)
-173=Disc variables
-174=My Discs variables
-175=Drive variables
-176=Save as...
-177=Edit Destination Templates...
-178=Copy '%s'
-179=Add disc that failed to open
-180=Add disc in virtual drives
-181=Add unprotected disc
-182=Add %s
-183=&Try Pro
-184=Actualizar a Pro
-185=This feature is only available to users with a Xreveal Pro license. You can try Pro for free or buy a license to unlock Pro features.
-186=The decryption key was not found. You can try Pro for free or buy a license to unlock Pro features.
+170=Nombre
+171=Valor
+172=Variables del usuario (Clic derecho en un elemento para editar el valor)
+173=Variables del disco
+174=Variables de Mis Discos
+175=Variables de la unidad
+176=Guardar como...
+177=Editar Plantillas de Destino...
+178=Copiar '%s'
+179=Añadir disco que falló al abrir
+180=Añadir disco en unidades virtuales
+181=Añadir disco desprotegido
+182=Añadir %s
+183=&Probar Pro
+184=Actualizar a Xreveal Pro
+185=Esta característica solo está disponible para los usuarios con una licencia de Xreveal Pro. Puedes probar gratuitamente Pro o comprar una licencia para desbloquear las características de Pro.
+186=No se encontró la clave de descifrado. Puedes probar gratuitamente Pro o comprar una licencia para desbloquear las características de Pro.
