--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -132,6 +132,7 @@ Author=jekovcar
 6=Добави лог състояние на устройство към лог извличане
 7=Показвай предупреждение при създаване на защитен имидж
 8=Enable the built-in ripper for &virtual drives
+9=Automatically save the destination directory of the last rip as $(DestDir)
 
 [DIALOG_18]
 0=Регистрация на Xreveal
@@ -252,12 +253,11 @@ Author=jekovcar
 4=Replace underscores in $(DiscLabel) to spaces
 
 [DIALOG_37]
-0=DestDir
-51=...
-52=$(DestDir):
+0=$(DestDir）
+3=Automatically save the destination directory of the last rip as $(DestDir)
 
 [DIALOG_38]
-0=DiscTypeMap
+0=$(DiscTypeMap）
 3=Please specify a map value corresponding to the disc type. <a>Supported variables</a>.
 4=&DVD:
 5=&HD DVD:
@@ -386,9 +386,9 @@ Author=jekovcar
 88=VUK
 89=UK
 90=&Преглед
-91=&Изтрий "%s"
+91=&Изтрий '%s'
 92=Изтрий &Всички
-93=Сигурни ли сте, да изтрие "%s"?
+93=Сигурни ли сте, да изтрие '%s'?
 94=Сигурни ли сте, че искате да изтриете всички записи?
 95=Тази функция е налична само в <a>Pro версия</a>.
 96=&Опресни
