--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -132,6 +132,7 @@ Author=The Punisher
 6=Laufwerksstatus an den Rip-Log anhängen.
 7=Hinweis anzeigen wenn ein geschütztes Image erzeugt wird.
 8=Enable the built-in ripper for &virtual drives
+9=Automatically save the destination directory of the last rip as $(DestDir)
 
 [DIALOG_18]
 0=Xreveal registrieren
@@ -252,12 +253,11 @@ Author=The Punisher
 4=Replace underscores in $(DiscLabel) to spaces
 
 [DIALOG_37]
-0=DestDir
-51=...
-52=$(DestDir):
+0=$(DestDir)
+3=Automatically save the destination directory of the last rip as $(DestDir)
 
 [DIALOG_38]
-0=DiscTypeMap
+0=$(DiscTypeMap)
 3=Please specify a map value corresponding to the disc type. <a>Supported variables</a>.
 4=&DVD:
 5=&HD DVD:
@@ -386,9 +386,9 @@ Author=The Punisher
 88=VUK
 89=UK
 90=&Anschauen
-91="%s" &löschen
+91='%s' &löschen
 92=&Alles löschen
-93=Sind Sie sicher das "%s" gelöscht werden soll ?
+93=Sind Sie sicher das '%s' gelöscht werden soll ?
 94=Sind Sie sicher das alle Einträge gelöscht werden sollen ?
 95=Diese Funktion ist nur in der <a>Pro-Version</a> verfügbar.
 96=&Aktualisieren
