--- a/Xreveal_ENU.ini
+++ b/Xreveal_ENU.ini
@@ -132,6 +132,7 @@ Author=
 6=Append the drive info log to the rip log
 7=Show warning when creating a protected image
 8=Enable the built-in ripper for &virtual drives
+9=Automatically save the destination directory of the last rip as $(DestDir)
 
 [DIALOG_18]
 0=Register Xreveal
@@ -252,12 +253,11 @@ Author=
 4=Replace underscores in $(DiscLabel) to spaces
 
 [DIALOG_37]
-0=DestDir
-51=...
-52=$(DestDir):
+0=$(DestDir)
+3=Automatically save the destination directory of the last rip as $(DestDir)
 
 [DIALOG_38]
-0=DiscTypeMap
+0=$(DiscTypeMap)
 3=Please specify a map value corresponding to the disc type. <a>Supported variables</a>.
 4=&DVD:
 5=&HD DVD:
@@ -353,7 +353,7 @@ Author=
 55=&Properties
 56=None
 57=You are using the free version, <a>upgrade to Pro</a> to unlock Pro features.
-58=%s already exists.\nDo you want to replace it?
+58='%s' already exists.\nDo you want to replace it?
 59=Are you sure you want to cancel?
 60=Your license has expired on %s.
 61=Player
@@ -386,9 +386,9 @@ Author=
 88=VUK
 89=UK
 90=&View
-91=&Delete "%s"
+91=&Delete '%s'
 92=Delete &All
-93=Are you sure you want to delete "%s"?
+93=Are you sure you want to delete '%s'?
 94=Are you sure you want to delete all records?
 95=This feature is only available in the <a>Pro version</a>.
 96=&Refresh
@@ -407,7 +407,7 @@ Author=
 109=Command line version (Windows/macOS/Linux)
 110=Abort
 111=Vendor specific
-112=Directory %s doesn't exist. Do you want to create it?
+112=Directory '%s' doesn't exist. Do you want to create it?
 113=When done: 
 114=Do nothing
 115=, 
@@ -429,7 +429,7 @@ Author=
 131=Select or drop the keydb.cfg here
 132=%u%% complete
 133=Error reading from drive %C:!\nSectors: %u-%u
-134=Error reading %s!\nSectors: %u-%u
+134=Error reading from file %s!\nSectors: %u-%u
 135=Aborted!
 136=Copying...
 137=Pro feature
