--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -132,6 +132,7 @@ Author=Andex
 6=A&jouter l'état du lecteur au journal de copie
 7=A&fficher un avertissement lors de la création d'une image ISO protégée
 8=Acti&ver la fonction de copie intégrée pour les lecteurs virtuels
+9=Automatically save the destination directory of the last rip as $(DestDir)
 
 [DIALOG_18]
 0=Enregistrement de la licence Pro
@@ -252,12 +253,11 @@ Author=Andex
 4=&Remplacer les underscores _ dans $(DiscLabel) par des espaces
 
 [DIALOG_37]
-0=DestDir
-51=...
-52=$(DestDir):
+0=$(DestDir)
+3=Automatically save the destination directory of the last rip as $(DestDir)
 
 [DIALOG_38]
-0=DiscTypeMap
+0=$(DiscTypeMap)
 3=Spécifiez une destination correspondant au type du disque  <a>Macros supportées</a>
 4=&DVD:
 5=&HD DVD:
