--- a/Xreveal_IND.ini
+++ b/Xreveal_IND.ini
@@ -132,6 +132,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 6=Append the drive info log to the rip log
 7=Show warning when creating a protected image
 8=Enable the built-in ripper for &virtual drives
+9=Automatically save the destination directory of the last rip as $(DestDir)
 
 [DIALOG_18]
 0=Daftar Xreveal
@@ -252,12 +253,11 @@ Author= Lieba Natur Brilian (naturbrilian)
 4=Replace underscores in $(DiscLabel) to spaces
 
 [DIALOG_37]
-0=DestDir
-51=...
-52=$(DestDir):
+0=$(DestDir)
+3=Automatically save the destination directory of the last rip as $(DestDir)
 
 [DIALOG_38]
-0=DiscTypeMap
+0=$(DiscTypeMap)
 3=Please specify a map value corresponding to the disc type. <a>Supported variables</a>.
 4=&DVD:
 5=&HD DVD:
@@ -386,9 +386,9 @@ Author= Lieba Natur Brilian (naturbrilian)
 88=VUK
 89=UK
 90=&Lihat
-91=&Hapus "%s"
+91=&Hapus '%s'
 92=Hapus &Semua
-93=Apakah anda yakin ingin menghapus "%s"?
+93=Apakah anda yakin ingin menghapus '%s'?
 94=Apakah anda yakin ingin menghapus semua rekaman?
 95=Fitur ini hanya tersedia di <a>Versi pro</a>.
 96=&Segarkan
