--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -132,6 +132,7 @@ Author=bovirus (bovirus@gmail.com)
 6=Aggiungi contenuto registro stato unità al registro rip
 7=Visualizza avviso creazione immagine protetta
 8=Abilita il ripper integrato per unità &virtuali
+9=Automatically save the destination directory of the last rip as $(DestDir)
 
 [DIALOG_18]
 0=Registra Xreveal
@@ -252,12 +253,11 @@ Author=bovirus (bovirus@gmail.com)
 4=Sostituisci in $(DiscLabel) sottolineature con spazi
 
 [DIALOG_37]
-0=Cartella destinazione
-51=...
-52=$(DestDir):
+0=$(DestDir)
+3=Automatically save the destination directory of the last rip as $(DestDir)
 
 [DIALOG_38]
-0=Mappa tipo disco
+0=$(DiscTypeMap)
 3=Specifica un valore mappa corrispondente al tipo di disco. <a>Variabili supportate</a>.
 4=&DVD:
 5=&HD DVD:
@@ -386,9 +386,9 @@ Author=bovirus (bovirus@gmail.com)
 88=VUK
 89=UK
 90=&Visualizza
-91=&Elimina "%s"
+91=&Elimina '%s'
 92=Elimina &tutto
-93=Vuoi eliminare "%s"?
+93=Vuoi eliminare '%s'?
 94=Vuoi eliminare tutti i record?
 95=Questa funzione è disponibile solo nella <a>versione Pro</a>.
 96=&Aggiorna
