--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -132,6 +132,7 @@ Author=비너스걸 (VenusGirl)
 6=드라이브 상태 로그를 추출 로그에 추가
 7=보호된 이미지 생성 시 경고 표시
 8=Enable the built-in ripper for &virtual drives
+9=Automatically save the destination directory of the last rip as $(DestDir)
 
 [DIALOG_18]
 0=등록
@@ -252,12 +253,11 @@ Author=비너스걸 (VenusGirl)
 4=Replace underscores in $(DiscLabel) to spaces
 
 [DIALOG_37]
-0=DestDir
-51=...
-52=$(DestDir):
+0=$(DestDir)
+3=Automatically save the destination directory of the last rip as $(DestDir)
 
 [DIALOG_38]
-0=DiscTypeMap
+0=$(DiscTypeMap)
 3=Please specify a map value corresponding to the disc type. <a>Supported variables</a>.
 4=&DVD:
 5=&HD DVD:
@@ -386,7 +386,7 @@ Author=비너스걸 (VenusGirl)
 88=VUK
 89=UK
 90=보기(&V)
-91=삭제(&D) "%s"
+91=삭제(&D) '%s'
 92=모두 삭제(&A)
 93=%s을(를) 삭제하시겠습니까?
 94=모든 레코드를 삭제하시겠습니까?
