--- a/Xreveal_PLK.ini
+++ b/Xreveal_PLK.ini
@@ -132,6 +132,7 @@ Author=Fresta, updated to 2.8.9 by adijos
 6=Dołącz zawartość statusu dysku do dziennika zgrywania
 7=Pokaż ostrzeżenie podczas tworzenia nieodszyfrowanego obrazu
 8=Enable the built-in ripper for &virtual drives
+9=Automatically save the destination directory of the last rip as $(DestDir)
 
 [DIALOG_18]
 0=Zarejestruj Xreveal
@@ -252,12 +253,11 @@ Author=Fresta, updated to 2.8.9 by adijos
 4=Replace underscores in $(DiscLabel) to spaces
 
 [DIALOG_37]
-0=DestDir
-51=...
-52=$(DestDir):
+0=$(DestDir)
+3=Automatically save the destination directory of the last rip as $(DestDir)
 
 [DIALOG_38]
-0=DiscTypeMap
+0=$(DiscTypeMap)
 3=Please specify a map value corresponding to the disc type. <a>Supported variables</a>.
 4=&DVD:
 5=&HD DVD:
@@ -386,9 +386,9 @@ Author=Fresta, updated to 2.8.9 by adijos
 88=VUK
 89=UK
 90=&Pokaż
-91=&Usuń "%s"
+91=&Usuń '%s'
 92=Usuń &Wszystko
-93=Czy na pewno chcesz usunąć? "%s"?
+93=Czy na pewno chcesz usunąć? '%s'?
 94=Czy na pewno chcesz usunąć wszystkie wpisy?
 95=Ta funkcja jest dostępna tylko w <a>wersji Pro</a>.
 96=&Odśwież
