--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -132,6 +132,7 @@ Author=jekovcar
 6=Добавлять лог состояния диска в лог рипа
 7=Показать предупреждение при создании защищённого образа
 8=Enable the built-in ripper for &virtual drives
+9=Automatically save the destination directory of the last rip as $(DestDir)
 
 [DIALOG_18]
 0=Регистрация Xreveal
@@ -252,12 +253,11 @@ Author=jekovcar
 4=Replace underscores in $(DiscLabel) to spaces
 
 [DIALOG_37]
-0=DestDir
-51=...
-52=$(DestDir):
+0=$(DestDir)
+3=Automatically save the destination directory of the last rip as $(DestDir)
 
 [DIALOG_38]
-0=DiscTypeMap
+0=$(DiscTypeMap)
 3=Please specify a map value corresponding to the disc type. <a>Supported variables</a>.
 4=&DVD:
 5=&HD DVD:
@@ -386,9 +386,9 @@ Author=jekovcar
 88=VUK
 89=UK
 90=&Вид
-91=&Удалить "%s"
+91=&Удалить '%s'
 92=&Удалить все
-93=Уверены, что хотите удалить "%s"?
+93=Уверены, что хотите удалить '%s'?
 94=Уверены, что хотите удалить все записи?
 95=Эта функция доступна только в <a>версии Pro.</a>.
 96=Обновить
