--- a/Xreveal_SLV.ini
+++ b/Xreveal_SLV.ini
@@ -132,6 +132,7 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 6=Append the drive info log to the rip log
 7=Show warning when creating a protected image
 8=Enable the built-in ripper for &virtual drives
+9=Automatically save the destination directory of the last rip as $(DestDir)
 
 [DIALOG_18]
 0=Registracija
@@ -252,12 +253,11 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 4=Replace underscores in $(DiscLabel) to spaces
 
 [DIALOG_37]
-0=DestDir
-51=...
-52=$(DestDir):
+0=$(DestDir)
+3=Automatically save the destination directory of the last rip as $(DestDir)
 
 [DIALOG_38]
-0=DiscTypeMap
+0=$(DiscTypeMap)
 3=Please specify a map value corresponding to the disc type. <a>Supported variables</a>.
 4=&DVD:
 5=&HD DVD:
@@ -386,9 +386,9 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 88=VUK
 89=UK
 90=&View
-91=&Delete "%s"
+91=&Delete '%s'
 92=Delete &All
-93=Are you sure you want to delete "%s"?
+93=Are you sure you want to delete '%s'?
 94=Are you sure you want to delete all records?
 95=This feature is only available in the <a>Pro version</a>.
 96=Osveži
