--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -132,6 +132,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 6=Agregar el registro de información de la unidad al registro de copiado
 7=Mostrar advertencia al crear una imagen protegida
 8=Habilitar el copiador incorporado para unidades &virtuales
+9=Automatically save the destination directory of the last rip as $(DestDir)
 
 [DIALOG_18]
 0=Registrar Xreveal
@@ -252,12 +253,11 @@ Author=Steven Rogers, Leandro Botella Penalva
 4=Remplazar barras bajas en $(DiscLabel) por espacios
 
 [DIALOG_37]
-0=DestDir
-51=...
-52=$(DestDir):
+0=$(DestDir)
+3=Automatically save the destination directory of the last rip as $(DestDir)
 
 [DIALOG_38]
-0=DiscTypeMap
+0=$(DiscTypeMap)
 3=Por favor, especifica un valor del mapa correspondiente al tipo de disco. <a>Variables soportadas</a>.
 4=&DVD:
 5=&HD DVD:
@@ -386,9 +386,9 @@ Author=Steven Rogers, Leandro Botella Penalva
 88=VUK
 89=UK
 90=&Ver
-91=&Eliminar "%s"
+91=&Eliminar '%s'
 92=Eliminar &Todo
-93=¿Estás seguro de que quieres eliminar "%s"?
+93=¿Estás seguro de que quieres eliminar '%s'?
 94=¿Estás seguro de que quieres eliminar todos los registros?
 95=Esta característica requiere la <a>versión Pro</a>.
 96=&Refrescar
