--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -132,6 +132,7 @@ Author=Harry Samwel, Sopor
 6=Lägg till enhetsstatus i loggen
 7=Visa varning när skyddad avbild skapas
 8=Enable the built-in ripper for &virtual drives
+9=Automatically save the destination directory of the last rip as $(DestDir)
 
 [DIALOG_18]
 0=Registrering
@@ -252,12 +253,11 @@ Author=Harry Samwel, Sopor
 4=Replace underscores in $(DiscLabel) to spaces
 
 [DIALOG_37]
-0=DestDir
-51=...
-52=$(DestDir):
+0=$(DestDir)
+3=Automatically save the destination directory of the last rip as $(DestDir)
 
 [DIALOG_38]
-0=DiscTypeMap
+0=$(DiscTypeMap)
 3=Please specify a map value corresponding to the disc type. <a>Supported variables</a>.
 4=&DVD:
 5=&HD DVD:
@@ -386,9 +386,9 @@ Author=Harry Samwel, Sopor
 88=VUK
 89=UK
 90=Visa
-91=Radera "%s"
+91=Radera '%s'
 92=Radera &Alla
-93=Är du säker att du vill radera "%s"?
+93=Är du säker att du vill radera '%s'?
 94=Är du säker att du vill radera alla uppgifter?
 95=Denna funktion är endast tillgänglig i <a>Pro versionen</a>.
 96=Uppdatera
