--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0804
 Name=Chinese (简体中文)
-Version=2.8.9
+Version=2.9.0
 Author=Tanuki
 1=确定
 2=取消
@@ -131,7 +131,8 @@ Author=Tanuki
 5=在将蓝光3D复制到文件夹时复制SSIF文件夹
 6=将驱动器状态内容追加到复制日志
 7=在创建受保护的ISO时显示警告
-8=Enable the built-in ripper for &virtual drives
+8=允许翻录虚拟光驱中碟片
+9=自动将上次翻录的文件夹保存为 $(DestDir)
 
 [DIALOG_18]
 0=注册
@@ -238,37 +239,36 @@ Author=Tanuki
 7=开始
 
 [DIALOG_35]
-0=Destination Templates
-3=&Add
-4=&Edit
-5=&Delete
-6=Move &Up
-7=&Move Down
-8=Note: the first item is the default template.
+0=目标模板
+3=&添加
+4=&编辑
+5=&删除
+6=上移(&U)
+7=下移(&M)
+8=注意：第一项为默认模板。
 
 [DIALOG_36]
-0=Destination
-3=Supported variables and <a>transforms</a>. Format: $(variable:transform), all names are case-insensitive.
-4=Replace underscores in $(DiscLabel) to spaces
+0=目标
+3=支持的变量和<a>转换</a>。格式：$(variable:transform)，所有名称不区分大小写。
+4=将 $(DiscLabel) 中的下划线替换为空格
 
 [DIALOG_37]
-0=DestDir
-51=...
-52=$(DestDir):
+0=$(DestDir)
+3=自动保存上次抓取的目标目录为 $(DestDir)
 
 [DIALOG_38]
-0=DiscTypeMap
-3=Please specify a map value corresponding to the disc type. <a>Supported variables</a>.
+0=$(DiscTypeMap)
+3=请指定与光盘类型对应的映射值。<a>支持的变量</a>。
 4=&DVD:
 5=&HD DVD:
 6=&BD:
 7=&UHD:
 
 [DIALOG_39]
-0=Replace or Save as
-3=The destination <a>%s</a> aready exists.
-4=Replace
-5=Save as
+0=替换或另存为
+3=目标 <a>%s</a> 已存在。
+4=替换
+5=另存为
 
 [DIALOG_A]
 0=软件更新
@@ -386,9 +386,9 @@ Author=Tanuki
 88=VUK
 89=UK
 90=查看(&V)
-91=删除 "%s"(&D)
+91=删除 '%s'(&D)
 92=删除所有 (&A)
-93=你确定要删除 "%s" 吗?
+93=你确定要删除 '%s' 吗?
 94=你确定要删除所有记录吗?
 95=升级为 <a>专业版</a> 才能使用此功能。
 96=刷新(&R)
@@ -465,20 +465,20 @@ Author=Tanuki
 167=请选择或拖动ISO文件至此
 168=请选择或拖动文件夹至此
 169=帮助
-170=Name
-171=Value
-172=User variables (Right-click an item to edit the value)
-173=Disc variables
-174=My Discs variables
-175=Drive variables
-176=Save as...
-177=Edit Destination Templates...
-178=Copy '%s'
-179=Add disc that failed to open
-180=Add disc in virtual drives
-181=Add unprotected disc
-182=Add %s
-183=&Try Pro
+170=名称
+171=值
+172=用户变量 (右键单击项目以编辑数值)
+173=光盘变量
+174=我的光盘变量
+175=驱动器变量
+176=另存为...
+177=编辑目标模板...
+178=复制 '%s'
+179=添加无法打开的光盘
+180=添加虚拟驱动器中的光盘
+181=添加未加密光盘
+182=添加 %s
+183=尝试专业版
 184=升级至专业版
-185=This feature is only available to users with a Xreveal Pro license. You can try Pro for free or buy a license to unlock Pro features.
-186=The decryption key was not found. You can try Pro for free or buy a license to unlock Pro features.
+185=此功能仅专业版用户可用。您可以免费试用专业版或购买许可以解锁专业功能。
+186=未找到解密密钥。您可以免费试用专业版或购买许可以解锁专业功能。
