--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -132,6 +132,7 @@ Author=Re*Index.(ot_inc)
 6=Append the drive info log to the rip log
 7=Show warning when creating a protected image
 8=Enable the built-in ripper for &virtual drives
+9=Automatically save the destination directory of the last rip as $(DestDir)
 
 [DIALOG_18]
 0=登録
@@ -252,12 +253,11 @@ Author=Re*Index.(ot_inc)
 4=Replace underscores in $(DiscLabel) to spaces
 
 [DIALOG_37]
-0=DestDir
-51=...
-52=$(DestDir):
+0=$(DestDir)
+3=Automatically save the destination directory of the last rip as $(DestDir)
 
 [DIALOG_38]
-0=DiscTypeMap
+0=$(DiscTypeMap)
 3=Please specify a map value corresponding to the disc type. <a>Supported variables</a>.
 4=&DVD:
 5=&HD DVD:
