Italian language update

--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -132,7 +132,7 @@ Author=bovirus (bovirus@gmail.com)
 6=Aggiungi contenuto registro stato unità al registro rip
 7=Visualizza avviso creazione immagine protetta
 8=Abilita il ripper integrato per unità &virtuali
-9=Automatically save the destination directory of the last rip as $(DestDir)
+9=Memorizza automaticamente la cartella destinazione dell'ultimo rip come $(DestDir)
 
 [DIALOG_18]
 0=Registra Xreveal
@@ -185,13 +185,13 @@ Author=bovirus (bovirus@gmail.com)
 0=Invia metafile
 1=&Invia
 3=Creazione metafile disco, attendi...
-4=Aggiunta di %s...
+4=Aggiunta di '%s'...
 5=<a>Vuoi inviarlo manualmente?</a>
 6=File meta:
 7=Email:
 8=Commento:
-9=Upload %s di %s
-10=Esegui l'upload del file meta soprastante in un hosting come %s, poi <a>invia il collegamento per il download</a>.
+9=Upload '%s' di '%s'
+10=Esegui l'upload del file meta soprastante in un hosting come '%s', poi <a>invia il collegamento per il download</a>.
 
 [DIALOG_29]
 0=Azioni
@@ -254,7 +254,7 @@ Author=bovirus (bovirus@gmail.com)
 
 [DIALOG_37]
 0=$(DestDir)
-3=Automatically save the destination directory of the last rip as $(DestDir)
+3=Memorizza automaticamente la cartella destinazione dell'ultimo rip come $(DestDir)
 
 [DIALOG_38]
 0=$(DiscTypeMap)
@@ -265,7 +265,7 @@ Author=bovirus (bovirus@gmail.com)
 7=&UHD:
 
 [DIALOG_39]
-0=Sotituisci o salva con nome
+0=Sostituisci o salva con nome
 3=La destinazione <a>%s</a> esiste già.
 4=Sostituisci
 5=Salva con nome
@@ -278,7 +278,7 @@ Author=bovirus (bovirus@gmail.com)
 6=Salta questa versione
 7=Ricordamelo in seguito
 8=Installa
-9=Download aggiornamento - %s di %s
+9=Download aggiornamento - '%s' di '%s'
 10=La versione installata è aggiornata!\n\nLa versione installata (%s) è la versione più recente.
 11=Si è verificato un errore durante il recupero delle informazioni sull’aggiornamento.\nRiprova più tardi.
 12=Si è verificato un errore durante il download dell’aggiornamento.\nRiprova più tardi.
@@ -313,12 +313,12 @@ Author=bovirus (bovirus@gmail.com)
 15=Alcuni dei file richiesti non sono presenti.\n\nReinstalla Xreveal.
 16=Xreveal non è stato installato correttamente.\n\nVuoi risolvere il problema?
 17=Per usare Xreveal è necessario riavviare il computer.\n\nVuoi riavviare il computer?
-18=Xreveal non funzionerà se %s è in esecuzione.\n\nVuoi chiudere %s?
+18=Xreveal non funzionerà se '%s' è in esecuzione.\n\nVuoi chiudere '%s'?
 19=Xreveal sta eseguendo la scansione dell'unità %C:
 20=Il disco inserito sarà disponibile a breve, attendi!
 21=L'unità %C: non è nella modalità di decriptazione on-the-fly!\n\nPer maggiori informazioni, fai riferimento alla finestra Info nelle impostazioni.
-22=La cartella %s non dispone di sufficiente spazio!\nÈ necessario %s di spazio aggiuntivo.
-23=Copia di %s...
+22=La cartella '%s' non dispone di sufficiente spazio!\nÈ necessario '%s' di spazio aggiuntivo.
+23=Copia di '%s'...
 24=%.1f MB/s
 25=Operazione completata!
 26=Chiave decriptazione non trovata {%s}
@@ -407,7 +407,7 @@ Author=bovirus (bovirus@gmail.com)
 109=Versione linea di comando (Windows/macOS/Linux)
 110=Interrompi
 111=Produttore specifico
-112=La cartella %s non esiste. Vuoi crearla?
+112=La cartella '%s' non esiste. Vuoi crearla?
 113=Quando completato: 
 114=Non fare nulla
 115=, 
@@ -429,7 +429,7 @@ Author=bovirus (bovirus@gmail.com)
 131=Seleziona/trascina qui il file keydb.cfg
 132=%u%% completato
 133=Errore lettura dall'unità %C:!\nSettori: %u-%u
-134=Errore lettura %s!\nSettori: %u-%u
+134=Errore lettura '%s'!\nSettori: %u-%u
 135=Interrotto!
 136=Copia...
 137=Funzione Pro
@@ -477,7 +477,7 @@ Author=bovirus (bovirus@gmail.com)
 179=Aggiungi disco la cui apertura è fallita
 180=Aggiungi disco alle unità virtuali
 181=Aggiungi disco non protetto
-182=Aggiungi %s
+182=Aggiungi '%s'
 183=&Prova Pro
 184=Passa a Pro
 185=Questa funzionalità è disponibile solo per utenti con una licenza Xreveal Pro.\nPuoi provare Xreveal Pro gratuitamente od acquistare una licenza per sbloccare caratteristiche di Xreveal Pro.
