Minor changes in SPA

--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -132,7 +132,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 6=Agregar el registro de información de la unidad al registro de copiado
 7=Mostrar advertencia al crear una imagen protegida
 8=Habilitar el copiador incorporado para unidades &virtuales
-9=Automatically save the destination directory of the last rip as $(DestDir)
+9=Guardar automaticamente el directorio de destino de la última copia como $(DestDir)
 
 [DIALOG_18]
 0=Registrar Xreveal
@@ -254,7 +254,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 
 [DIALOG_37]
 0=$(DestDir)
-3=Automatically save the destination directory of the last rip as $(DestDir)
+3=Guardar automaticamente el directorio de destino de la última copia como $(DestDir)
 
 [DIALOG_38]
 0=$(DiscTypeMap)
@@ -353,7 +353,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 55=&Propiedades
 56=Ninguno
 57=Estás usando la versión gratuita, <a>mejora a Pro</a> para desbloquear las características de Pro.
-58=%s ya existe.\n¿Quieres remplazarlo?
+58='%s' ya existe.\n¿Quieres remplazarlo?
 59=¿Estás seguro de que quieres cancelar?
 60=Tu licencia expiró el %s.
 61=Reproductor
@@ -407,7 +407,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 109=Versión de línea de comandos (Windows/macOS/Linux)
 110=Abortar
 111=Específico fabricante
-112=El directorio %s no existe. ¿Quieres crearlo?
+112=El directorio '%s' no existe. ¿Quieres crearlo?
 113=Cuando termine:
 114=No hacer nada
 115=,
@@ -429,7 +429,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 131=Selecciona o suelta el keydb.cfg aquí
 132=%u%% completado
 133=¡Error de lectura de la unidad %C:!\Sectores: %u-%u
-134=¡Error de lectura %s!\nSectores: %u-%u
+134=¡Error de lectura del archivo %s!\nSectores: %u-%u
 135=¡Abortado!
 136=Copiando...
 137=Solo en Pro
