--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -132,7 +132,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 6=Agregar el registro de información de la unidad al registro de copiado
 7=Mostrar advertencia al crear una imagen protegida
 8=Habilitar el copiador incorporado para unidades &virtuales
-9=Guardar automaticamente el directorio de destino de la última copia como $(DestDir)
+9=Guardar automáticamente el directorio de destino de la última copia como $(DestDir)
 
 [DIALOG_18]
 0=Registrar Xreveal
@@ -254,7 +254,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 
 [DIALOG_37]
 0=$(DestDir)
-3=Guardar automaticamente el directorio de destino de la última copia como $(DestDir)
+3=Guardar automáticamente el directorio de destino de la última copia como $(DestDir)
 
 [DIALOG_38]
 0=$(DiscTypeMap)
