--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0407
 Name=German (Deutsch)
-Version=2.8.9
+Version=2.9.0
 Author=The Punisher
 1=OK
 2=Abbrechen
@@ -131,8 +131,8 @@ Author=The Punisher
 5=SSIF-Ordner kopieren während eine 3D Blu-ray in einen Ordner gerippt wird.
 6=Laufwerksstatus an den Rip-Log anhängen.
 7=Hinweis anzeigen wenn ein geschütztes Image erzeugt wird.
-8=Enable the built-in ripper for &virtual drives
-9=Automatically save the destination directory of the last rip as $(DestDir)
+8=Integrierten Ripper für &virtuelle Laufwerke aktivieren.
+9=Automatisch Zielverzeichnis vom letzten Rip als $(DestDir) speichern.
 
 [DIALOG_18]
 0=Xreveal registrieren
@@ -231,7 +231,7 @@ Author=The Punisher
 7=di:Name
 
 [DIALOG_34]
-0=Ordner nach ISO
+0=Ordner zu ISO
 3=&Ordner:
 4=&ISO Datei:
 5=&Label:
@@ -239,36 +239,36 @@ Author=The Punisher
 7=Start
 
 [DIALOG_35]
-0=Destination Templates
-3=&Add
-4=&Edit
-5=&Delete
-6=Move &Up
-7=&Move Down
-8=Note: the first item is the default template.
+0=Zielverzeichnisvorlagen
+3=&Hinzufügen
+4=&Bearbeiten
+5=&Löschen
+6=Nach &oben
+7=&Nach unten
+8=Hinweis: Der erste Eintrag ist das Standardverzeichnis.
 
 [DIALOG_36]
-0=Destination
-3=Supported variables and <a>transforms</a>. Format: $(variable:transform), all names are case-insensitive.
-4=Replace underscores in $(DiscLabel) to spaces
+0=Zielverzeichnis
+3=Unterstützte Variablen und <a>Transforms</a>. Format: $(variable:transform), Großschreibung nicht nötig.
+4=Ersetze Unterstrich mit Leerzeichen in $(DiscLabel)
 
 [DIALOG_37]
 0=$(DestDir)
-3=Automatically save the destination directory of the last rip as $(DestDir)
+3=Automatisch Zielverzeichnis vom letzten Rip als $(DestDir) speichern.
 
 [DIALOG_38]
 0=$(DiscTypeMap)
-3=Please specify a map value corresponding to the disc type. <a>Supported variables</a>.
+3=Bitte geben Sie eine Variable passend zum Disc-Typ ein. <a>Unterstützte Variablen</a>.
 4=&DVD:
 5=&HD DVD:
 6=&BD:
 7=&UHD:
 
 [DIALOG_39]
-0=Replace or Save as
-3=The destination <a>%s</a> aready exists.
-4=Replace
-5=Save as
+0=Ersetzen oder Speichern als
+3=Das Zielverzeichnis <a>%s</a> existiert bereits.
+4=Ersetzen
+5=Speichern als
 
 [DIALOG_A]
 0=Software-Update
@@ -461,24 +461,24 @@ Author=The Punisher
 163=Die Datei wurde erfolgreich übermittelt, vielen Dank!
 164=Dieses Fenster schließen.
 165=Ändere ISO &Label...
-166=&Ordner nach ISO...
+166=&Ordner zu ISO...
 167=Bitte wählen Sie eine ISO Datei aus oder ziehen eine ISO hierhin.
 168=Bitte wählen Sie einen Ordner aus oder ziehen einen Ordner hierhin.
 169=Hilfe
 170=Name
-171=Value
-172=User variables (Right-click an item to edit the value)
-173=Disc variables
-174=My Discs variables
-175=Drive variables
-176=Save as...
-177=Edit Destination Templates...
-178=Copy '%s'
-179=Add disc that failed to open
-180=Add disc in virtual drives
-181=Add unprotected disc
-182=Add %s
-183=&Try Pro
-184=Upgrade auf Pro
-185=This feature is only available to users with a Xreveal Pro license. You can try Pro for free or buy a license to unlock Pro features.
-186=The decryption key was not found. You can try Pro for free or buy a license to unlock Pro features.
+171=Wert
+172=Nutzer-Variablen (zum Bearbeiten: Rechts-Klick)
+173=Disc-Variablen
+174=Meine Discs-Variablen
+175=Laufwerks-Variablen
+176=Speichern als...
+177=Zielverzeichnisvorlage bearbeiten...
+178=Kopieren '%s'
+179=Discs die nicht geöffnet werden konnten trotzdem hinzufügen
+180=Disc in Virtuelle-Laufwerke hinzufügen
+181=Nicht verschlüsselte Discs hinzufügen
+182=Hinzufügen %s
+183=&Test der Pro-Version
+184=Auf Pro-Version erweitern
+185=Diese Funktion ist nur für Nutzer der Pro-Version verfügbar. Diese können Sie testen oder eventuell gleich eine Pro-Lizenz erwerben.
+186=Keine passende Entschlüsselungsdatei gefunden. Bitte testen Sie unsere Pro-Version oder eventuell gleich eine Pro-Lizenz erwerben.
