--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -1,7 +1,7 @@
-﻿[INFO]
+[INFO]
 ID=0x0412
 Name=Korean (한국어)
-Version=2.8.9
+Version=2.9.0
 Author=비너스걸 (VenusGirl)
 1=확인
 2=취소
@@ -131,8 +131,8 @@ Author=비너스걸 (VenusGirl)
 5=블루레이 3D 추출 중 SSIF 폴더를 해당 폴더에 복사
 6=드라이브 상태 로그를 추출 로그에 추가
 7=보호된 이미지 생성 시 경고 표시
-8=Enable the built-in ripper for &virtual drives
-9=Automatically save the destination directory of the last rip as $(DestDir)
+8=가상 드라이브를 위한 내장 리퍼 사용함
+9=마지막 복사의 대상 디렉터리를 $(DestDir)로 자동 저장
 
 [DIALOG_18]
 0=등록
@@ -239,36 +239,36 @@ Author=비너스걸 (VenusGirl)
 7=시작
 
 [DIALOG_35]
-0=Destination Templates
-3=&Add
-4=&Edit
-5=&Delete
-6=Move &Up
-7=&Move Down
-8=Note: the first item is the default template.
+0=대상 템플릿
+3=추가(&A)
+4=편집(&E)
+5=삭제(&D)
+6=위로 이동(&U)
+7= 아래로 이동(&M)
+8=참고: 첫 번째 항목은 기본 템플릿입니다.
 
 [DIALOG_36]
-0=Destination
-3=Supported variables and <a>transforms</a>. Format: $(variable:transform), all names are case-insensitive.
-4=Replace underscores in $(DiscLabel) to spaces
+0=대상
+3=지원 변수 및 <a>transforms</a>. 형식: $(variable:transform), 모든 이름은 대소문자를 구분하지 않습니다.
+4=($DiscLabel)의 밑줄을 공백으로 바꿉니다
 
 [DIALOG_37]
 0=$(DestDir)
-3=Automatically save the destination directory of the last rip as $(DestDir)
+3=마지막 복사의 대상 디렉터리를 자동으로 $(DestDir)로 저장합니다
 
 [DIALOG_38]
 0=$(DiscTypeMap)
-3=Please specify a map value corresponding to the disc type. <a>Supported variables</a>.
+3=디스크 유형에 해당하는 맵 값을 지정하세요. <a>지원되는 변수</a>.
 4=&DVD:
 5=&HD DVD:
 6=&BD:
 7=&UHD:
 
 [DIALOG_39]
-0=Replace or Save as
-3=The destination <a>%s</a> aready exists.
-4=Replace
-5=Save as
+0=바꾸기 또는 다른 이름으로 저장
+3=대상 <a>%s</a>이(가) 이미 존재합니다.
+4=바꾸기
+5=다른 이름으로 저장
 
 [DIALOG_A]
 0=소프트웨어 업데이트
@@ -465,20 +465,20 @@ Author=비너스걸 (VenusGirl)
 167=여기에 ISO 파일을 선택하거나 드래그하세요
 168=여기에 폴더를 선택하거나 드래그하세요
 169=도움말
-170=Name
-171=Value
-172=User variables (Right-click an item to edit the value)
-173=Disc variables
-174=My Discs variables
-175=Drive variables
-176=Save as...
-177=Edit Destination Templates...
-178=Copy '%s'
-179=Add disc that failed to open
-180=Add disc in virtual drives
-181=Add unprotected disc
-182=Add %s
-183=&Try Pro
-184=프로로 업그레이드
-185=This feature is only available to users with a Xreveal Pro license. You can try Pro for free or buy a license to unlock Pro features.
-186=The decryption key was not found. You can try Pro for free or buy a license to unlock Pro features.
+170=이름
+171=값
+172=사용자 변수 (항목을 마우스 오른쪽 버튼으로 클릭하여 값을 편집하세요)
+173=디스크 변수
+174=내 디스크 변수
+175=드라이브 변수
+176=다른 이름으로 저장...
+177=대상 템플릿 편집...
+178='%s' 복사
+179=열리지 않은 디스크 추가
+180=가상 드라이브에 디스크 추가
+181=보호되지 않은 디스크 추가
+182=%s 추가
+183=Pro 사용해보기(&T)
+184=Xreveal Pro로 업그레이드
+185=이 기능은 Xreveal Pro 라이선스를 소지한 사용자만 사용할 수 있습니다. Pro를 무료로 사용해보거나 라이선스를 구매하여 Pro 기능을 잠금 해제할 수 있습니다.
+186=복호화 키를 찾을 수 없습니다. Pro 기능을 잠금 해제하려면 무료로 사용해 보거나 라이선스를 구입할 수 있습니다.
