--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -94,9 +94,9 @@ Author=Andex
 
 [DIALOG_14]
 1=Démarrer
-3=Source
-4=Destination
-5=Options
+3=&Source
+4=&Destination
+5=&Options
 6=Info
 7=Type:
 8=Taille:
@@ -106,11 +106,11 @@ Author=Andex
 12=&Conserver la protection
 13=&Vérifier l'intégrité des données
 14=Créer un fichier de contrôle &MD5
-15=Créer un fichier &dvdid.xml
+15=Créer un fichier dvdid.&xml
 16=Créer un fichier &journal
 17=Créer un fichier disc.&metaiso
-18=Copier &seulement le dossier 'VIDEO_TS'
-19=Vérifier les &octets de synchronisation M2TS
+18=Co&pier seulement le dossier 'VIDEO_TS'
+19=Vé&rifier les octets de synchronisation M2TS
 
 [DIALOG_15]
 0=Xreveal
@@ -129,10 +129,10 @@ Author=Andex
 3=&Tentatives de relecture:
 4=&Abandonner lorsque le nombre d'erreurs ignorées dépasse:
 5=&Copier le dossier 'SSIF' lors de la copie d'un Blu-ray *3D* dans un dossier
-6=A&jouter l'état du lecteur au journal de copie
+6=A&jouter les informations du lecteur au journal de copie
 7=A&fficher un avertissement lors de la création d'une image ISO protégée
 8=Acti&ver la fonction de copie intégrée pour les lecteurs virtuels
-9=Automatically save the destination directory of the last rip as $(DestDir)
+9=&Enregistrer le dossier de destination de la dernière copie dans $(DestDir)
 
 [DIALOG_18]
 0=Enregistrement de la licence Pro
@@ -254,7 +254,7 @@ Author=Andex
 
 [DIALOG_37]
 0=$(DestDir)
-3=Automatically save the destination directory of the last rip as $(DestDir)
+3=&Enregistrer le dossier de destination de la dernière copie dans $(DestDir)
 
 [DIALOG_38]
 0=$(DiscTypeMap)
@@ -266,7 +266,7 @@ Author=Andex
 
 [DIALOG_39]
 0=Fichier/Dossier existant
-3=La destination <a>%s</a> existe déjà!
+3=<a>%s</a> existe déjà!
 4=&Remplacer
 5=&Enregistrer sous
 
@@ -337,7 +337,7 @@ Author=Andex
 39=%C:\[%S]
 40=&Statut
 41=&Ouvrir dans l'explorateur Windows
-42=&Créer/envoyer un fichier d'informations
+42=&Envoyer un fichier d'informations
 43=Vérifier un BD/UHD...
 44=Copier dans un dossier...
 45=Copier en fichier ISO...
