--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -94,9 +94,9 @@ Author=Andex
 
 [DIALOG_14]
 1=Démarrer
-3=&Source
-4=&Destination
-5=&Options
+3=Source
+4=Destination
+5=Options
 6=Info
 7=Type:
 8=Taille:
@@ -109,8 +109,8 @@ Author=Andex
 15=Créer un fichier dvdid.&xml
 16=Créer un fichier &journal
 17=Créer un fichier disc.&metaiso
-18=Co&pier seulement le dossier 'VIDEO_TS'
-19=Vé&rifier les octets de synchronisation M2TS
+18=C&opier seulement le dossier 'VIDEO_TS'
+19=Vérifier les octets de &synchronisation M2TS
 
 [DIALOG_15]
 0=Xreveal
@@ -482,3 +482,4 @@ Author=Andex
 184=&Acheter...
 185=Cette fonctionnalité est disponible pour les utilisateurs possédant une license Pro.\nVous pouvez essayer la version Pro gratuitement ou acheter une licence.
 186=La clé de déchiffrement est introuvable!\nVous pouvez essayer la version Pro gratuitement ou acheter une licence.
+
